# ALCF

./: .gitignore  LICENSE  README.md
DLPack/: README.md  basicStats_dpctl.py  dbscan_dpbench_inputs.py  dbscan_dpctl_spmd.py  dbscan_dpnp.py  dlpack_dp_pt.py  dlpack_dp_tf.py  dlpack_dpctl_dpnp.py  dlpack_dpctl_pt.py  dlpack_np_pt_tf.py  dlpack_pt_tf.py  env_aurora.sh  sklearnx_dpnp.py  train_test_split_dpnp.py
ML/: README.md  plotScaling.py
ML/DeepNN/: scaling_DNN_pt_hvd.py
ML/ResNet/: plot_resnet_scaling.sh
ML/onlineML/: NNmodel.pt  NNmodel_jit.pt  submit_sunspot.sh
ML/onlineML/src/: offline_train.py  (+3 more)
ONNX/: subInteractive_Polaris.sh
ONNX/convert_pt2onnx/: convert_pt2onnx.py
ONNX/example_cpp/: CMakeLists.txt  README.txt
ONNX/example_py/: convert_pt2onnx.py  inference_onnx.py  model.onnx  model.pt  run_polaris.sh  submit_polaris.sh
Scaling/: plotScaling.py  plotScaling.sh  plotScaling_all.py  scaling_anisoSGS_pt_hvd.py  submit_anisoSGS_Polaris.sh  submit_resnet_ThetaGPU.sh
Scaling/DeepNN/: scaling_DNN_pt_ddp.py  scaling_DNN_pt_hvd.py  submit_DNN_Polaris_gpu.sh
Scaling/ResNet/: scaling_resnet_pt_hvd.py
Scaling/anisoSGS/: scaling_anisoSGS_pt_ddp.py  scaling_anisoSGS_pt_ddp_deepDive.py  scaling_anisoSGS_pt_hvd.py  scaling_anisoSGS_pt_hvd_deepDive.py  submit_anisoSGS_Polaris_cpu.sh  submit_anisoSGS_Polaris_gpu.sh
Scaling/onlineML/: affinity_polaris.sh  affinity_sunspot.sh
SmartSim/: README.md
SmartSim/Theta/: a.out
SmartSim/Utility/: jit_PTModel.py
user-docs/Polaris/LibTorch/inference/: CMakeLists.txt  inference-example.cpp  resnet50_trace.py
(+211 files in other folders)
